--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  font-family: "Lato";
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.5px;
+  color: #FEFEFE;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: black;
+}
+
+.rainbowfont {
+  background: linear-gradient(271deg,#a0e9ff 30%,#a162e8 50%,#f093b0 70%,#edca85 94%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.yellow {
+    background: -webkit-gradient(linear, left top, left bottom, from(#edca85), to(#f093b0));
+}
+
+.pink {
+  background: -webkit-gradient(linear, left top, left bottom, from(#f093b0), to(#a162e8));
+}
+
+.blue {
+  background: -webkit-gradient(linear, left top, left bottom, from(#a162e8), to(#a0e9ff));
+}
+
+.title {
+  font-family: "Fraunces";
+  font-variation-settings: 'opsz' 1;
+}
+
+.navbarItem {
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.navbarItem::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 35%;
+  border-bottom: 3px solid black;
+  width: 30%;
+  transition-property: width, left;
+  transition: 0.4s linear;
+}
+
+.navbarItem:hover::before{
+  border-bottom: 3px solid #9FE9FF;
+  width: 90%;
+  left: 5%;
 }
