--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,62 @@ body {
   width: 90%;
   left: 5%;
 }
+
+/* contact page */
+.contactButton {
+  padding: 15px 35px;
+  border-radius: 10px;
+  background: black;
+  color: #D3D3D3;
+  border: 1px solid #D3D3D3;
+  margin-top: 15px;
+  font-size: 18px;
+}
+
+.neonBox {
+  color: #fff;
+
+}
+
+.contactButton:hover {
+  background-color: white;
+  color: black;
+}
+
+.contactInput {
+  border: 1px #D3D3D3 solid;
+  border-radius: 10px;
+  font-size: 17px;
+  letter-spacing: 2px;
+  width: 400px;
+  margin-top: 15px;
+  padding: 15px;
+  background-color: black;
+  
+}
+
+.contactInput:hover {
+  /* border: 1px solid white; */
+  box-shadow:
+  0 0 1px #fff,
+  0 0 1px #fff,
+  0 0 2px #fff,
+  0 0 3px gray,
+  0 0 4px gray,
+  0 0 6px gray,
+  0 0 7px gray,
+  0 0 8px gray;
+}
+
+.contactInput::placeholder {
+  color: #D3D3D3;
+}
+
+/* Portfolio */
+.project {
+  transition: transform ease 0.5s;
+}
+
+.project:hover {
+  transform: translateY(-7px);
+}
